fix a broken style in navbar header

--- a/app/components/navbar.module.css
+++ b/app/components/navbar.module.css
@@ -29,7 +29,7 @@
   color: #1890FF;
 }
 
-.headerRight {
+.headerRight > div{
   display: flex;
   align-items: center;
   gap: 16px;
